Apache Cayenne Release Notes
============================

For the latest information visit project web site: 
http://cayenne.apache.org/

To browse individual bug reports check out project issue tracker:
https://issues.apache.org/jira/browse/CAY

----------------------------------
Release: 3.1B3
Date: not yet released
----------------------------------
Bug Fixes Since 3.1B2:

CAY-1794 Duplicate attributes in discriminator columns of PersistentDescriptor
CAY-1804 Serialisation of long[] type was not working correctly. 
CAY-1806 Error importing eomodel 
CAY-1809 Remove 'final' modifier from Cayenne, HessianUtil, PropertyComparator, ConversionUtil, and LinkedDeque

----------------------------------
Release: 3.1B2
Date: 18 February 2013
----------------------------------
Changes/New Features Since 3.1B1:

CAY-1737 ObjectContexts listening to DataChannel events must be non-blocking
CAY-1753 remove light-superclass.vm class template
CAY-1754 Modeler suggested URL for SQLServer should start with 'jdbc:sqlserver:' instead of 'jdbc:microsoft:sqlserver:'

Bug Fixes Since 3.1B1:

CAY-957 Deadlock in nested contexts
CAY-1689 [PATCH] LOB*QueryBuilders do not check isQuotingSQLIdentifiers
CAY-1701 Modeler cannot undo pasting of obj (db) entity
CAY-1708 Modeler error when pasting datamap with EJBQL query
CAY-1713 Inconsistent property name: "cayenne.rop.service.timeout"
CAY-1714 ROP: Cayenne tries to build a query for non committed object when using more than 2 nested contexts 
CAY-1715 Passing parameters to mapped EJBQL queries
CAY-1721 Writing blobs fails (Oracle)
CAY-1725 NullPointerException from call to removeToManyTarget
CAY-1727 Modeler thinks entity is using inheritance when it doesn't
CAY-1729 PersistentDescriptor must have predictable property iteration order
CAY-1735 Serializable IncrementalFaultList
CAY-1738 Tutorial cayenne-rop-server should be packaged as a war
CAY-1739 Cayenne ROP server resets session on every request if BASIC auth is used